syntax = "proto3";

package example.v1;

import "buf/validate/validate.proto";

option go_package = "example.com/gen/go/proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string name = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 100
  }];
  
  string email = 2 [(buf.validate.field).string = {
    email: true
  }];
}

message CreateUserResponse {
  string user_id = 1;
  string message = 2;
}

message GetUserRequest {
  string user_id = 1 [(buf.validate.field).string = {
    min_len: 1
  }];
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}